--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi>=0.92.0",
     "uvicorn>=0.20.0",
     "mechanicalsoup>=1.2.0",
+    "openai>=0.27.0"
 ]
 requires-python = ">=3.10"
 readme = "README.md"
