--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "fastapi>=0.92.0",
     "uvicorn>=0.20.0",
     "mechanicalsoup>=1.2.0",
-    "openai>=0.27.0"
+    "openai>=0.27.0",
+    "pypdf2>=3.0.1",
+    "python-dotenv>=1.0.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
