--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "openai>=0.27.0",
     "pypdf2>=3.0.1",
     "python-dotenv>=1.0.0",
+    "cloudscraper>=1.2.69",
+    "beautifulsoup4>=4.11.2"
 ]
 requires-python = ">=3.10"
 readme = "README.md"
