--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "dev": "npm run build_schema && vite dev"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.21.0"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.2",
