--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "parse-json": "^6.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.21.0"
+    "zod": "^3.21.0",
+    "jsonrepair": "^3.0.2"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.2",
