--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@react-pdf/renderer": "^3.1.6",
     "@types/parse-json": "^4.0.0",
+    "jsonrepair": "^3.0.2",
     "parse-json": "^6.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.21.0",
-    "jsonrepair": "^3.0.2"
+    "react-type-animation": "^2.1.2",
+    "zod": "^3.21.0"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.2",
